--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .board{
 	color:#ffffff;
 	background-color:#404040;
@@ -32,4 +33,16 @@ body{
 	width: 40px;
 	border-radius: 5px;
 	background-color: #ffffff;
+}
+#simulating{
+	color: #ffffff;
+	height: 40px;
+	width: 100px;
+	background-color: #337ab7;
+}
+#create{
+	color: #ffffff;
+	height: 40px;
+	width: 100px;
+	background-color: #f0ad4e;
 }
