--- a/style.css
+++ b/style.css
@@ -21,16 +21,19 @@
 	color: #ffffff;
 	background-color: #404040;
 	background-attachment: right;
+	border-radius: 5px;
 }
 
 /*simulating list*/
 .sl{
 	color: #000000;
 	text-align: center;
+	vertical-align: center;
 	background-color: #f0ad4e;
 	width: inherit;
 	height: inherit;
 	font-weight: bold;
+	border-radius: inherit;
 }
 
 body{
