--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 	color: #000000;
 	text-align: center;
 	vertical-align: center;
+	padding:auto;
 	background-color: #f0ad4e;
 	width: inherit;
 	height: inherit;
