--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@
 /*simulating board*/
 .sb{
 	width: 350px;
-	height: 180px;
+	height: 4rem;
 	color: #ffffff;
 	background-color: #404040;
 	background-attachment: right;
 	border-radius: 5px;
+	overflow: auto;
 }
 
-/*simulating list*/
 /*simulating list*/
 .sl{
 	color: #000000;
@@ -33,8 +33,8 @@
 	padding-top:auto;
 	padding-bottom:auto;
 	background-color: #f0ad4e;
-	width: inherit;
-	height: inherit;
+	width: 350px;
+	height: 180px;
 	font-weight: bold;
 	border-radius: inherit;
 }
