--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 /*simulating board*/
 .sb{
 	width: 350px;
-	height: 4rem;
+	height: 100em;
 	color: #ffffff;
 	background-color: #404040;
 	background-attachment: right;
