--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 /*simulating board*/
 .sb{
-	width: 350px;
+	width: 100%;
 	height: 85em;
 	color: #ffffff;
 	background-color: #404040;
@@ -32,7 +32,7 @@
 	padding-top:auto;
 	padding-bottom:auto;
 	background-color: #f0ad4e;
-	width: 350px;
+	width: inherit;
 	height: 180px;
 	font-weight: bold;
 	border-radius: 7px;
