--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 
 /*simulating board*/
 .sb{
-	width: 100%;
-	height: 85em;
+	width: 350px;
+	height: 70em;
 	color: #ffffff;
 	background-color: #404040;
 	background-attachment: right;
