--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
 	vertical-align: center;
 	padding-top:auto;
 	padding-bottom:auto;
-	background-color: #f0ad4e;
+	background-color: #337ab7;
 	width: inherit;
 	height: 180px;
 	background-size:fixed;
