--- a/style.css
+++ b/style.css
@@ -7,12 +7,9 @@
 	margin-bottom: 0px;
 	padding: 10px;
 	background-size: cover;
+	display: block;
 }
 
-.board2{
-	width:inherit;
-	height:inherit;
-}
 
 .board .putIn{
 	background-color:#808080;
