--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 	background-color:#808080;
 }
 
-/*simulating board*/
-.sb{
+/*input board*/
+.ib{
 	width: 75%;
 	height: 75em;
 	color: #ffffff;
@@ -27,8 +27,8 @@
 	overflow: auto;
 }
 
-/*simulating list*/
-.sl{
+/*input list*/
+#il{
 	color: #000000;
 	text-align: center;
 	vertical-align: center;
@@ -56,7 +56,7 @@
 }
 
 /*output list*/
-.ol{
+#ol{
 	color: #000000;
 	text-align: center;
 	vertical-align: center;
