--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 /*input list*/
-#il{
+.il{
 	color: #000000;
 	text-align: center;
 	vertical-align: center;
@@ -56,7 +56,7 @@
 }
 
 /*output list*/
-#ol{
+.ol{
 	color: #000000;
 	text-align: center;
 	vertical-align: center;
