--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,12 @@
 	background-size: cover;
 	display: block;
 	z-index: -1;
+	-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          		    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+.item{
+	margin: 0;
+	padding: 0;
 }
 .input-sidebar, .output-sidebar{
 	text-align: center;
@@ -19,11 +25,16 @@
 .output-sidebar{
 	color: #f0ad4e;
 }
-#title{
-	color: #333333;
+.title{
 	font-family: 'Roboto', sans-serif;
 	font-weight: 100;
 	font-size: 40px;
+}
+.title .input{
+	color: #337ab7;
+}
+.title .output{
+	color: #f0ad4e;
 }
 #glyphicons{
 	padding: 1px;
@@ -41,12 +52,13 @@
 	transition: background .5s;
 }
 .process{
+	position: fixed;
+	bottom: 75px;
 	align: center;
 	color: #ffffff;
-	height: 50px;
-	width: 100%;
+	height: 20px;
 	padding: 10px;
-	margin: 0 auto;
+	margin: 0;
 }
 #simulating{	
 	background-color: #337ab7;
