--- a/assets/style.css
+++ b/assets/style.css
@@ -56,30 +56,52 @@
 #create{
 	background-color: #f0ad4e;
 }
-
 .inputOver{
-	width: 200px;
-	height: 70px;
+	width: 150px;
+	height: 50px;
+	border-radius: 5px;
 	background-color: #06d5f9;
 	text-align:center;
-	padding:10px;
+	padding: 5px;
+	margin: 5px;
 	z-index: 1;
 }
 
 .outputOver{
-	width: 200px;
-	height: 70px;
+	width: 150px;
+	height: 50px;
+	border-radius: 5px;
 	background-color: #eaf50a;
 	text-align:center;
 	vertical-align:center;
-	padding:10px;
+	padding: 5px;
+	margin: 5px;
 	z-index: 1;
 }
 
 .inputContent{
+	width: 150px;
+	height: 50px;
+	border-radius: 5px;
 	position:absolute;
+	background-color: #337ab7;
+	text-align:center;
+	vertical-align:center;
+	padding: 5px;
+	margin: 5px;
+	z-index: 1;
 }
-
+.outputContent{
+	width: 150px;
+	height: 50px;
+	border-radius: 5px;
+	background-color: #f0ad4e;
+	text-align:center;
+	vertical-align:center;
+	padding: 5px;
+	margin: 5px;
+	z-index: 1;
+}
 #onBoard{
 	z-index:1;
 }
