JS-main.js, style.css
버튼 수정, 마우스 포인터 수정

--- a/assets/style.css
+++ b/assets/style.css
@@ -80,11 +80,11 @@
 	margin: 0 auto;
 }
 #simulating{	
-	margin-bottom: 3px;
-	padding-bottom: 3px;
+	padding: 5px 10px 10px 10px;
 	background-color: #337ab7;
 }
 #create{
+	padding: 5px 10px 10px 10px;
 	background-color: #f0ad4e;
 }
 .inputOver{
