--- a/assets/style.css
+++ b/assets/style.css
@@ -80,11 +80,11 @@
 	margin: 0 auto;
 }
 #simulating{	
-	padding: 5px 10px 10px 10px;
+	margin-bottom: 3px;
+	padding-bottom: 3px;
 	background-color: #337ab7;
 }
 #create{
-	padding: 5px 10px 10px 10px;
 	background-color: #f0ad4e;
 }
 .inputOver{
