--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,22 @@
+.garbage{
+	padding: 0;
+	top: -50px;
+	left:0px;
+	height: 50px;
+	position: fixed;
+	background-color: #d50a0a;
+	text-align: center;
+	padding: 10px 10px 10px 10px;
+}
 .board{
 	color:#ffffff;
 	background-color:#404040;
 	-webkit-background-size:cover;
 		 -moz-background-size:cover;
 			  -o-background-size:cover;
-	margin-bottom: 0px;
-	padding: 10px;
 	background-size: cover;
 	display: block;
 	position:relative;
-	padding: 5px;
 }
 
 .boardOver{
@@ -18,12 +25,9 @@
 	-webkit-background-size:cover;
 		 -moz-background-size:cover;
 			  -o-background-size:cover;
-	margin-bottom: 0px;
-	padding: 10px;
 	background-size: cover;
 	display: block;
 	position:relative;
-	padding: 5px;
 }
 .input-sidebar, .output-sidebar{
 	text-align: center;
@@ -117,7 +121,7 @@
 	width: auto;
 	height: auto;
 	border-radius: 5px;
-	position:absolute;
+	position:fixed;
 	background-color: #337ab7;
 	text-align:center;
 	vertical-align:center;
