ver.1 index.html, style.css, main.js
지우개 에러 수정 및 인식 범위 최적화

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 .garbage{
-	padding: 0;
 	top: -50px;
 	left:0px;
 	height: 50px;
@@ -8,15 +7,11 @@
 	text-align: center;
 	padding: 10px 10px 10px 10px;
 }
-.garbageOver{
-	padding: 0;
-	top: -50px;
-	left:0px;
-	position: fixed;
+.garbage:hover{
 	background-color: #ff8080;
-	text-align: center;
-	padding: 10px 10px 10px 10px;
+	transition: background .5s;
 }
+
 .board{
 	color:#ffffff;
 	background-color:#404040;
