--- a/assets/style.css
+++ b/assets/style.css
@@ -162,3 +162,16 @@
 	text-align:center;
 	z-index:1;
 }
+
+.outputToggle{
+	width: 150px;
+	height: 50px;
+	border-radius: 5px;
+	background-color: #ff8040;
+	text-align:center;
+	vertical-align:center;
+	padding: 5px;
+	margin: 5px;
+	display:block;
+	box-shadow: 3px 3px 10px #000000;
+}
